src/test/resources/scripts/language/parser/invalid/coercion/nonFunctionInvocation.sbsc
// parser shouldn't let us invoke something that isn't a function.

a = 5;

a();

return false;